--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "4",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
     "graphql.macro": "^1.4.2",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "realm-web": "^1.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -27,6 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "deploy": "yarn build && aws s3 sync --delete build \"s3://jlab-scores\" --profile personal",
     "generate": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
